# arangocompare

./: .gitignore  Dockerfile  README.md  arango_compare.py  arangofail.tar  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.py
.github/workflows/: build_and_push.yml  ci.yml  manual.yaml  release-main.yml
arango_compare/: .arangocompareoldfailwtf.py  __init__.py  arango_compare.py  client.py  comparator.py  formatter.py  main.py
tests/: test_arango_compare.py  test_integration.py
