[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arango_compare"
version = "0.1.0"
description = "A tool to compare ArangoDB instances."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests"
]
